fix(UI) horizontal scrolling is not allowed

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,8 @@
+body {
+  position: relative;
+  overflow: hidden;
+}
+
 .unstyled-list {
   list-style: none;
   padding: 0;
